Added new sub-projects - NodeMCU implementations of WS2812 test - OSC Python modules - OSC NodeMCU client (not working yet; message dispatch doesn't match?)

--- a/colorCtrl/Untitled0.ipynb
+++ b/colorCtrl/Untitled0.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d3b5252fecd0f5c0e1fc582c4bf8ead11b74fd4b85de4f89d2a2c198ca414136"
+  "signature": "sha256:42e0798a4f313f23829904f3f0c9f909c2d0c57080f626b2ef2892e4cd2a43ca"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -25,14 +25,26 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "ename": "ImportError",
+       "evalue": "No module named pylab",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-1-37cd0f124550>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mskimage\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mpylab\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mmpl_toolkits\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmplot3d\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mAxes3D\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mImportError\u001b[0m: No module named pylab"
+       ]
+      }
+     ],
      "prompt_number": 1
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "imgFile = 'D:/Pictures/wallpaper/o1075054.jpg'\n",
+      "imgFile = '/home/sebastian/Pictures/wallpaper/02919_orangeinaqua_1280x800.jpg'\n",
+      "# imgFile = 'D:/Pictures/wallpaper/o1075054.jpg'\n",
       "img = skimage.data.imread(imgFile)\n"
      ],
      "language": "python",
